edition = "2023";

package testB;
import "test-diagnostics.proto";

message SimpleEdition {
	string name = 1;
	int32 id = 2; // identifier for the message
	testA.TestDuplicates duplicates = 3; // reference to TestDuplicates message
}
